CDB-3808 #resolve - Fixed header overlay z-index for GMaps visualizations

--- a/app/assets/stylesheets/map/overlays.css.scss
+++ b/app/assets/stylesheets/map/overlays.css.scss
@@ -68,11 +68,13 @@
     font-weight: bold;
     font-size:15px;
     color: #fff;
+    line-height:22px;
   }
 
   .description {
     color: #fff;
     font-size:13px;
+    line-height:19px;
 
     a {
       color: inherit;
@@ -85,7 +87,7 @@
 
   }
 
-  z-index:0;
+  z-index:1;
 
 }
 
